--- a/Discografia.html
+++ b/Discografia.html
@@ -37,9 +37,9 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="BTS.html">Su Historia</a></li>
-							<li><a href="generic.html">Discografia BTS</a></li>
-							<li><a href="generic.html">Discografia Solistas</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="Discografia.html">Discografia BTS</a></li>
+							<li><a href="Discografia.html">Discografia Solistas</a></li>
+							
 						</ul>
 					</nav>
 
