--- a/DiscografiaSolista.html
+++ b/DiscografiaSolista.html
@@ -39,7 +39,7 @@
 							<li><a href="BTS.html">Su Historia</a></li>
 							<li><a href="Discografia.html">Discografia BTS</a></li>
 							<li><a href="DiscografiaSolista.html">Discografia Solistas</a></li>
-							<!-- <li><a href="elements.html">Elements</a></li> -->
+							
 						</ul>
 					</nav>
 
@@ -48,12 +48,12 @@
 						<div class="inner">
 							<header>
 								<h1>Discografia Solistas</h1>
-								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
+								
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/namsolista.jpg" alt="" />
+										<img src="images/NamSolista.png" alt="" />
 									</span>
 									<a href="NamSolista.html">
 										<h2>NAM</h2>
@@ -65,7 +65,7 @@
 
                 <article class="style1">
 									<span class="image">
-										<img src="images/JinSolista.jpeg" alt="" />
+										<img src="images/JinSolista.png" alt="" />
 									</span>
 									<a href="JinSolista.html">
 										<h2>Jin</h2>
@@ -77,10 +77,58 @@
 
                 <article class="style1">
 									<span class="image">
-										<img src="images/yoongisolista.jpg" alt="" />
+										<img src="images/YoongiSolista.png" alt="" />
 									</span>
 									<a href="yoongisolista.html">
-										<h2>Jin</h2>
+										<h2>Suga</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style1">
+									<span class="image">
+										<img src="images/HobiSolista.png" alt="" />
+									</span>
+									<a href="HobiSolista.html">
+										<h2>JHope</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style1">
+									<span class="image">
+										<img src="images/JiminSolista.png" alt="" />
+									</span>
+									<a href="JiminSolista.html">
+										<h2>Jimin</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style1">
+									<span class="image">
+										<img src="images/TaeSolista.png" alt="" />
+									</span>
+									<a href="TaeSolista.html">
+										<h2>V</h2>
+										<div class="content">
+											<p></p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style1">
+									<span class="image">
+										<img src="images/JkSolista.png" alt="" />
+									</span>
+									<a href="JKSolista.html">
+										<h2>Jung Kook</h2>
 										<div class="content">
 											<p></p>
 										</div>
