--- a/Jk.html
+++ b/Jk.html
@@ -24,8 +24,7 @@
 								<a href="index.html" class="logo">
 									<span class="title">Mikrokosmos</span>
 								</a>
-								<!-- <span class="symbol"><img src="images/logo.svg" alt="" /></span> -->
-							<!-- Nav -->
+							
 								<nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
@@ -40,10 +39,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Su Historia</a></li>
-							<li><a href="generic.html">Discografia BTS</a></li>
-							<li><a href="generic.html">Discografia Solistas</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="BTS.html">Su Historia</a></li>
+							<li><a href="Discografia.html">Discografia BTS</a></li>
+							<li><a href="DiscografiaSolista.html">Discografia Solistas</a></li>
+							
 						</ul>
 					</nav>
 
