--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<li><a href="BTS.html">Su Historia</a></li>
 							<li><a href="Discografia.html">Discografia BTS</a></li>
 							<li><a href="DiscografiaSolista.html">Discografia Solistas</a></li>
-							<!-- <li><a href="elements.html">Elements</a></li> -->
+							
 						</ul>
 					</nav>
 
@@ -51,9 +51,10 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
-								template designed by .</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>Este es mi regalo para Army</h1>
+								<p>Hola, soy Vero, Army desde Julio del 2022, conoci a BTS en el momento mas critico de mi depresión, llegaron a mi a una madrugada a travez de Zero O Clock y nunca mas se fueron. Gracias a ellos aprendí que yo soy lo mas importante de mi vida y que sino me cuido y amo a mi misma no puedo cuidar y amar a las personas que me rodean. Gracias a estos 7 seres, conocí a personas maravillosas y nuevas amigas con las cuales a diario recorro este hermoso universo purpura.  Espero que esta pequeña pagina ayude a Armys nuevas a conocer un poco mas a los 7 coreanos que han cambiado la vida de millones de personas. </p>
+
+								<p> Boraghe </p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -153,51 +154,7 @@
 											<p>«La felicidad no es algo que tengas que conseguir. Puedes seguir sintiéndote feliz durante el proceso de lograr algo.»  -BTS</p>
 										</div>
 									</a>
-								<!-- </article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article> --> 
+								
 							</section>
 						</div>
 					</div>
