--- a/BTS.html
+++ b/BTS.html
@@ -42,8 +42,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="BTS.html">Su Historia</a></li>
 							<li><a href="Discografia.html">Discografia BTS</a></li>
-							<li><a href="generic.html">Discografia Solistas</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="DiscografiaSolista.html">Discografia Solistas</a></li>
+							
 						</ul>
 					</nav>
 
@@ -59,6 +59,8 @@
 							<p>BTS es el artista con mayores ventas en la historia de Corea del Sur, con más de treinta millones en Gaon Music Chart, y mantiene el récord del álbum más vendido en ese país con Map of the Soul: 7. Así mismo, es el primer y único artista de habla no inglesa en ser nombrado como el artista global del año (2020) por la IFPI, en estar en la lista Top Touring Artists of the 2010s de Billboard y en dar un concierto —con todas las entradas agotadas— en el Estadio de Wembley. Por otro lado, la revista Time los incluyó en la portada de su edición internacional como «Líderes de la nueva generación» y han aparecido en varios de sus listados; estuvieron entre las 25 personas más influyentes en Internet, desde 2017 hasta 2019, y entre las 100 personas más influyentes en el mundo en 2019, en la que los apodaron «Príncipes del Pop».</p>
 								
 							<p>El grupo ha recibido numerosos reconocimientos por su trabajo, incluyendo seis American Music Awards, nueve Billboard Music Awards y nominaciones en los premios Grammy y premios Brit. Tras establecer su campaña antiviolencia Love Myself, en colaboración con UNICEF, dio un discurso tanto en la 73.ª como en la 75.ª edición de la Asamblea General de las Naciones Unidas. Además, sus integrantes son los receptores más jóvenes de la Orden al Mérito Cultural, otorgada por el presidente de Corea del Sur por ayudar a expandir la cultura e idioma coreano en el mundo.</p>
+
+							<p> Texto by Laura Rivas.</p>
 						</div>
 					</div>
 
