--- a/HobiSolista.html
+++ b/HobiSolista.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Jung Hoseok</title>
+		<title>Mikrokosmos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,9 +18,9 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="title">Mikrokosmos</span>
+									</span><span class="title">Mikrokosmos</span>
 								</a>
-								<!-- <span class="symbol"><img src="images/logo.svg" alt="" /></span> -->
+								<!-- <span class="symbol"><img src="images/logo.svg" alt="" /> -->
 							<!-- Nav -->
 								<nav>
 									<ul>
@@ -50,13 +46,55 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Jung Hoseok</h1>
-							<span class="image main"><img src="images/hobipage.png" alt="" /></span>
-							<p>DJ-Hope (정호석 / Jung Ho Seok), nació el 18 de febrero de 1994 en Gwangju, Corea del sur. Es uno de los miembros de BTS, es el bailarín principal, además de coreografo, sin embargo también participa en el desarrollo musical del grupo, aunque en menor medida que sus compañeros Rap Monster y Suga, es el tercer miembro de la "Rap Line" junto con los dos miembros mencionados antes.</p>
-							<p>Antes de ingresar a Big Hit y luego a BTS, Jung Hoseok era un bailarín callejero bajo el nombre de "SmileHoya". Sin embargo mas adelante perfeccionaría su estilo de baile en la "Seungri's Dance Academy". En su época de bailarín callejero, participó en dos grupos de baile: "GO Arts" y "NEURON", donde ganaría diversos premios junto a sus compañeros.
+							<header>
+								<h1>JHope Solista.<br /></h1>
+							</header>
 
-								J-Hope audicionaría para JYP Entertainment pero no seria aceptado, aunque luego ingresaría a Big Hit.</p>
-							<p>Dentro del grupo, J-Hope es reconocido por ser alegre y eufórico, según Rap Monster, él junto a Jin, ayudan a arreglar el ambiente cuando esta tenso, nervioso o descompuesto debido a su personalidad alegre y positiva, además de hacer "aegyo" solo cuando esta en cámara, J-Hope demuestra no tener pudor de expresar sus sentimientos alegres con su cuerpo o sus acciones.</p>
+							<section class="tiles">
+
+								<article class="style1">
+									<span class="image">
+										<img src="images/hopeedition.jpg" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/3XuUxVKw2mDLSIkZNYoaa6?si=FQa3Wtf4ScO8YLbfK9XSvQ" target="_blank"></a>
+								</article>
+
+								<article class="style1">
+									<span class="image">
+										<img src="images/onthestreet.png" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/70xdtgH5XuYTqBNdNbUwGO?si=7EYrQUaURMiHfHPyZ99XdA" target="_blank"></a>
+								</article>
+
+								<article class="style1">
+									<span class="image">
+										<img src="images/jitb.png" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/0FrC9lzgVhziJenigsrXdl?si=bxph_BrcQGik9zVMvs_P1w" target="_blank"></a>
+								</article>
+
+                <article class="style1">
+									<span class="image">
+										<img src="images/blueside.png" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/1PwHmb34vUnPLJp3vSLKed?si=WI0657XrR_-c-MIKph4_8A" target="_blank"></a>
+								</article>
+
+                <article class="style1">
+									<span class="image">
+										<img src="images/CNS.png" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/2wwGHSWLwrlXDmi3DEaZ4A?si=6CzyoiNVTTefERgxOWiu7Q" target="_blank"></a>
+								</article>
+
+                <article class="style1">
+									<span class="image">
+										<img src="images/hopeworld.png" alt="" />
+									</span>
+									<a href="https://open.spotify.com/album/0XX1044L7ovU5aon6nRiF7?si=qehD8fb3QqqqAmSlmgdcDQ" target="_blank"></a>
+								</article>
+								
+							</section>
 						</div>
 					</div>
 
@@ -77,7 +115,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>All rights reserved Veronica Eschenmoser</li>
+								<li>All rights reserved Veronica Eschenmoser</li></li>
 							</ul>
 						</div>
 					</footer>
