--- a/Nam.html
+++ b/Nam.html
@@ -40,10 +40,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Su Historia</a></li>
-							<li><a href="generic.html">Discografia BTS</a></li>
-							<li><a href="generic.html">Discografia Solistas</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="BTS.html">Su Historia</a></li>
+							<li><a href="Discografia.html">Discografia BTS</a></li>
+							<li><a href="DiscografiaSolista.html">Discografia Solistas</a></li>
+							
 						</ul>
 					</nav>
 
@@ -65,25 +65,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<!-- <section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section> -->
+							
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
@@ -98,7 +80,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; All rights reserved Veronica Eschenmoser</li>
+								<li> All rights reserved Veronica Eschenmoser</li>
 							</ul>
 						</div>
 					</footer>
