--- a/Tae.html
+++ b/Tae.html
@@ -40,10 +40,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Su Historia</a></li>
-							<li><a href="generic.html">Discografia BTS</a></li>
-							<li><a href="generic.html">Discografia Solistas</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="BTS.html">Su Historia</a></li>
+							<li><a href="Discografia.html">Discografia BTS</a></li>
+							<li><a href="DiscografiaSolista.html">Discografia Solistas</a></li>
+							
 						</ul>
 					</nav>
 
