--- a/Jin.html
+++ b/Jin.html
@@ -63,27 +63,20 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-						
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>All rights reserved Veronica Eschenmoser</li>
+				<footer id="footer">
+					<div class="inner">
+						<section>
+							<h2>Follow</h2>
+							<ul class="icons">
+								<li><a href="https://www.instagram.com/proyecto_mikrokosmos" class="icon brands style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+								<li><a href="https://chat.whatsapp.com/CXDFHzBbsi5I4vhOWW2EW6" class="icon brands style2 fa-whatsapp" target="_blank"><span class="label">WhatsApp</span></a></li>
 							</ul>
-						</div>
-					</footer>
+						</section>
+						<ul class="copyright">
+							<li> All rights reserved Veronica Eschenmoser</li>
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
