--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="inner">
 							<header>
 								<h1>Este es mi regalo para Army</h1>
-								<p>Hola, soy Vero, Army desde Julio del 2022, conoci a BTS en el momento mas critico de mi depresión, llegaron a mi a una madrugada a travez de Zero O Clock y nunca mas se fueron. Gracias a ellos aprendí que yo soy lo mas importante de mi vida y que sino me cuido y amo a mi misma no puedo cuidar y amar a las personas que me rodean. Gracias a estos 7 seres, conocí a personas maravillosas y nuevas amigas con las cuales a diario recorro este hermoso universo purpura.  Espero que esta pequeña pagina ayude a Armys nuevas a conocer un poco mas a los 7 coreanos que han cambiado la vida de millones de personas. </p>
+								<p>"Hola, soy Vero, Army desde julio de 2022. Conocí a BTS en el momento más crítico de mi depresión. Llegaron a mí en una madrugada a través de 'Zero O'Clock' y nunca más se fueron. Gracias a ellos, aprendí que yo soy lo más importante en mi vida y que si no me cuido y a mi a mí misma, no puedo cuidar y amar a las personas que me rodean. Gracias a estos 7 seres, conocí a personas maravillosas y nuevas amigas con las cuales a diario recorro este hermoso universo púrpura. Espero que esta pequeña página ayude a Armys nuevas a conocer un poco más a los 7 coreanos que han cambiado la vida de millones de personas." </p>
 
 								<p> Boraghe </p>
 							</header>
@@ -160,27 +160,20 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>All rights reserved Veronica Eschenmoser</li></li>
+				<footer id="footer">
+					<div class="inner">
+						<section>
+							<h2>Follow</h2>
+							<ul class="icons">
+								<li><a href="https://www.instagram.com/proyecto_mikrokosmos" class="icon brands style2 fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+								<li><a href="https://chat.whatsapp.com/CXDFHzBbsi5I4vhOWW2EW6" class="icon brands style2 fa-whatsapp" target="_blank"><span class="label">WhatsApp</span></a></li>
 							</ul>
-						</div>
-					</footer>
-
+						</section>
+						<ul class="copyright">
+							<li> All rights reserved Veronica Eschenmoser</li>
+						</ul>
+					</div>
+				</footer>
 			</div>
 
 		<!-- Scripts -->
