--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									</span><span class="title">Mikrokosmos</span>
+									<!-- </span><span class="title">Mikrokosmos</span> -->
 								</a>
 								<!-- <span class="symbol"><img src="images/logo.svg" alt="" /> -->
 							<!-- Nav -->
@@ -51,8 +51,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Este es mi regalo para Army</h1>
-								<p>"Hola, soy Vero, Army desde julio de 2022. Conocí a BTS en el momento más crítico de mi depresión. Llegaron a mí en una madrugada a través de 'Zero O'Clock' y nunca más se fueron. Gracias a ellos, aprendí que yo soy lo más importante en mi vida y que si no me cuido y a mi a mí misma, no puedo cuidar y amar a las personas que me rodean. Gracias a estos 7 seres, conocí a personas maravillosas y nuevas amigas con las cuales a diario recorro este hermoso universo púrpura. Espero que esta pequeña página ayude a Armys nuevas a conocer un poco más a los 7 coreanos que han cambiado la vida de millones de personas." </p>
+								<h1>Mikrokosmos</h1>
+								<p>"Hola, soy Vero, Army desde julio de 2022. Conocí a BTS en el momento más crítico de mi depresión. Llegaron a mí en una madrugada a través de 'Zero O'Clock' y nunca más se fueron. Gracias a ellos, aprendí que yo soy lo más importante en mi vida y que si no me cuido y amo a mí misma, no puedo cuidar y amar a las personas que me rodean. Gracias a estos 7 seres, conocí a personas maravillosas y nuevas amigas con las cuales a diario recorro este hermoso universo púrpura. Espero que esta pequeña página ayude a Armys nuevas a conocer un poco más a los 7 coreanos que han cambiado la vida de millones de personas." </p>
 
 								<p> Boraghe </p>
 							</header>
