--- a/Discografia.html
+++ b/Discografia.html
@@ -38,7 +38,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="BTS.html">Su Historia</a></li>
 							<li><a href="Discografia.html">Discografia BTS</a></li>
-							<li><a href="Discografia.html">Discografia Solistas</a></li>
+							<li><a href="DiscografiaSolista.html">Discografia Solistas</a></li>
 							
 						</ul>
 					</nav>
