--- a/BTS.html
+++ b/BTS.html
@@ -50,7 +50,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>BTS</h1>
+							<h1>Su Historia</h1>
 							<span class="image main"><img src="images/btspage.png" alt="" /></span>
 							<p>Es un grupo surcoreano formado en Seúl en 2010, que debutó el 13 de junio de 2013 bajo la compañía Big Hit Music.2​ Está compuesto por siete integrantes: Jin, Suga, J-Hope, RM, Jimin, V y Jungkook, quienes son los que coescriben y coproducen la mayor parte de su material discográfico. A pesar de haber sido creado con un estilo principalmente hip hop, ha llegado a incorporar una gran variedad de géneros en su repertorio musical.</p>
 
